2000-09-29  Darin Adler  <darin@eazel.com>

	* gnome-vfs.spec.in: Make RPM builds do "make check" and also make
	them compile with warnings on. This make the Tinderbox more
	strict. Also use "make -k" so we get more errors at once on the
	Tinderbox. Errors are still errors, we just see more of them.
	
	* libgnomevfs/gnome-vfs-xfer.c: (system_time), (init_progress):
	Fix code to not use LL explicitly since that's not as portable as
	gint64 is.
	(init_progress): Got rid of code initializing the same fields to
	NULL twice.
	(empty_directory), (copy_items), (move_items), (link_items),
	(gnome_vfs_new_directory_with_unique_name): Change code to use
	file names in URI encoded form throughout. No unescaping in here.
	This was all done by changing which GnomeVFSURI calls we use.

2000-09-28  Ramiro Estrugo  <ramiro@eazel.com>

	* configure.in:
	Switch the order of assignment of warnings to CFLAGS so that they
	can be overridden by the user at configure time.
	
2000-09-28  Mike Fleming  <mfleming@eazel.com>

	Fixed file_info refcounting issues associated with _clear and
	_copy.  (_clear retains the refcount; _copy leaves the refcount of
	the destination alone).

	Changed _init, _ref, and _unref to clarify that ref-counting a 
	file_info that was allocated on the stack is illegal.
	
	Added _dup function.

	* libgnomevfs/gnome-vfs-file-info.c: (gnome_vfs_file_info_init),
	(gnome_vfs_file_info_clear), (gnome_vfs_file_info_ref),
	(gnome_vfs_file_info_unref), (gnome_vfs_file_info_copy),
	(gnome_vfs_file_info_dup):
	* libgnomevfs/gnome-vfs-file-info.h:

2000-09-28  Pavel Cisler  <pavel@eazel.com>

	* libgnomevfs-pthread/gnome-vfs-job.c:
	* libgnomevfs/gnome-vfs-xfer.c: (gnome_vfs_xfer_delete_items),
	(gnome_vfs_xfer_uri_list), (gnome_vfs_xfer_uri),
	(gnome_vfs_xfer_delete_list):
	* libgnomevfs/gnome-vfs-xfer.h:
	Add a gnome_vfs_xfer_delete_list call to match the feature
	that already exists in gnome_vfs_xfer_async. Andy needed this code
	for theme deleting.
